update with go info

--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -51,3 +51,11 @@ options:
     generate-test: true
     generate-sample: true
     flavor: "azure"
+  "@azure-tools/typespec-go":
+    emitter-output-dir: "{output-dir}/{service-dir}/containerregistry"
+    module-name: "github.com/Azure/azure-sdk-for-go/sdk/containers/azcontainerregistry"
+    package-name: "azcontainerregistry"
+    package-version: "0.2.4"
+    inject-spans: true
+
+
