--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -52,7 +52,7 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-go":
-    emitter-output-dir: "{output-dir}/{service-dir}/containerregistry"
+    emitter-output-dir: "{output-dir}/{service-dir}/azcontainerregistry"
     module-name: "github.com/Azure/azure-sdk-for-go/sdk/containers/azcontainerregistry"
     package-name: "azcontainerregistry"
     package-version: "0.2.4"
