Fix SDK configuration issues in tspconfig.yaml

--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -33,6 +33,7 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-csharp":
+    package-name: "Azure.Containers.ContainerRegistry"
     package-dir: "Azure.Containers.ContainerRegistry"
     package-version: "1.1.1"
     namespace: "Azure.Containers.ContainerRegistry"
@@ -57,3 +58,4 @@ options:
     package-name: "azcontainerregistry"
     package-version: "0.2.4"
     inject-spans: true
+    flavor: "azure"
