Add missing generate-test and generate-sample fields for Go configuration

--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -58,4 +58,6 @@ options:
     package-name: "azcontainerregistry"
     package-version: "0.2.4"
     inject-spans: true
+    generate-test: true
+    generate-sample: true
     flavor: "azure"
