change outputfolder and regen

--- a/specification/containerregistry/data-plane/Registry/stable/2021-07-01/examples/DeleteManifest.json
+++ b/specification/containerregistry/data-plane/Registry/stable/2021-07-01/examples/DeleteManifest.json
@@ -1,11 +1,13 @@
 {
   "parameters": {
-    "url": "acrapi.azurecr-test.io",
     "name": "alpine",
-    "reference": "3.7"
+    "reference": "3.7",
+    "url": "acrapi.azurecr-test.io"
   },
   "responses": {
     "202": {},
     "404": {}
-  }
+  },
+  "operationId": "ContainerRegistry_DeleteManifest",
+  "title": "Delete manifest"
 }
