--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     azure-resource-provider-folder: "data-plane"
     emitter-output-dir: "{project-root}/.."
     examples-dir: "{project-root}/examples"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/containerregistry.json"
+    output-file: "{azure-resource-provider-folder}/Registry/{version-status}/{version}/containerregistry.json"
   "@azure-tools/typespec-python":
     package-dir: "azure-containerregistry"
     package-name: "azure-containerregistry"
