--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -170,12 +170,6 @@
         "x-ms-examples": {
           "Connections_List_MaximumSet": {
             "$ref": "./examples/Connections_List_MaximumSet_Gen.json"
-          },
-          "Connections_List_MaximumSet_Gen": {
-            "$ref": "./examples/Connections_List_MaximumSet_Gen.json"
-          },
-          "Connections_List_MinimumSet_Gen": {
-            "$ref": "./examples/Connections_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -232,12 +226,6 @@
         "x-ms-examples": {
           "Connections_Get_MaximumSet": {
             "$ref": "./examples/Connections_Get_MaximumSet_Gen.json"
-          },
-          "Connections_Get_MaximumSet_Gen": {
-            "$ref": "./examples/Connections_Get_MaximumSet_Gen.json"
-          },
-          "Connections_Get_MinimumSet_Gen": {
-            "$ref": "./examples/Connections_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -291,12 +279,6 @@
         "x-ms-examples": {
           "Connections_GetWithCredentials_MaximumSet": {
             "$ref": "./examples/Connections_GetWithCredentials_MaximumSet_Gen.json"
-          },
-          "Connections_GetWithCredentials_MaximumSet_Gen": {
-            "$ref": "./examples/Connections_GetWithCredentials_MaximumSet_Gen.json"
-          },
-          "Connections_GetWithCredentials_MinimumSet_Gen": {
-            "$ref": "./examples/Connections_GetWithCredentials_MinimumSet_Gen.json"
           }
         }
       }
@@ -335,12 +317,6 @@
             "$ref": "./examples/Datasets_ListLatest_MaximumSet_Gen.json"
           },
           "Datasets_ListLatest_MinimumSet": {
-            "$ref": "./examples/Datasets_ListLatest_MinimumSet_Gen.json"
-          },
-          "Datasets_ListLatest_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_ListLatest_MaximumSet_Gen.json"
-          },
-          "Datasets_ListLatest_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_ListLatest_MinimumSet_Gen.json"
           }
         },
@@ -390,12 +366,6 @@
             "$ref": "./examples/Datasets_ListVersions_MaximumSet_Gen.json"
           },
           "Datasets_ListVersions_MinimumSet": {
-            "$ref": "./examples/Datasets_ListVersions_MinimumSet_Gen.json"
-          },
-          "Datasets_ListVersions_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_ListVersions_MaximumSet_Gen.json"
-          },
-          "Datasets_ListVersions_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_ListVersions_MinimumSet_Gen.json"
           }
         },
@@ -452,12 +422,6 @@
             "$ref": "./examples/Datasets_GetVersion_MaximumSet_Gen.json"
           },
           "Datasets_GetVersion_MinimumSet": {
-            "$ref": "./examples/Datasets_GetVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_GetVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_GetVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_GetVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_GetVersion_MinimumSet_Gen.json"
           }
         }
@@ -528,12 +492,6 @@
           },
           "Datasets_CreateOrUpdateVersion_MinimumSet": {
             "$ref": "./examples/Datasets_CreateOrUpdateVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_CreateOrUpdateVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_CreateOrUpdateVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_CreateOrUpdateVersion_MinimumSet_Gen": {
-            "$ref": "./examples/Datasets_CreateOrUpdateVersion_MinimumSet_Gen.json"
           }
         }
       },
@@ -581,12 +539,6 @@
             "$ref": "./examples/Datasets_DeleteVersion_MaximumSet_Gen.json"
           },
           "Datasets_DeleteVersion_MinimumSet": {
-            "$ref": "./examples/Datasets_DeleteVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_DeleteVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_DeleteVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_DeleteVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_DeleteVersion_MinimumSet_Gen.json"
           }
         }
@@ -640,12 +592,6 @@
             "$ref": "./examples/Datasets_GetCredentials_MaximumSet_Gen.json"
           },
           "Datasets_GetCredentials_MinimumSet": {
-            "$ref": "./examples/Datasets_GetCredentials_MinimumSet_Gen.json"
-          },
-          "Datasets_GetCredentials_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_GetCredentials_MaximumSet_Gen.json"
-          },
-          "Datasets_GetCredentials_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_GetCredentials_MinimumSet_Gen.json"
           }
         }
@@ -708,12 +654,6 @@
             "$ref": "./examples/Datasets_StartPendingUploadVersion_MaximumSet_Gen.json"
           },
           "Datasets_StartPendingUploadVersion_MinimumSet": {
-            "$ref": "./examples/Datasets_StartPendingUploadVersion_MinimumSet_Gen.json"
-          },
-          "Datasets_StartPendingUploadVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Datasets_StartPendingUploadVersion_MaximumSet_Gen.json"
-          },
-          "Datasets_StartPendingUploadVersion_MinimumSet_Gen": {
             "$ref": "./examples/Datasets_StartPendingUploadVersion_MinimumSet_Gen.json"
           }
         }
@@ -796,12 +736,6 @@
         "x-ms-examples": {
           "Deployments_List_MaximumSet": {
             "$ref": "./examples/Deployments_List_MaximumSet_Gen.json"
-          },
-          "Deployments_List_MaximumSet_Gen": {
-            "$ref": "./examples/Deployments_List_MaximumSet_Gen.json"
-          },
-          "Deployments_List_MinimumSet_Gen": {
-            "$ref": "./examples/Deployments_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -858,12 +792,6 @@
         "x-ms-examples": {
           "Deployments_Get_MaximumSet": {
             "$ref": "./examples/Deployments_Get_MaximumSet_Gen.json"
-          },
-          "Deployments_Get_MaximumSet_Gen": {
-            "$ref": "./examples/Deployments_Get_MaximumSet_Gen.json"
-          },
-          "Deployments_Get_MinimumSet_Gen": {
-            "$ref": "./examples/Deployments_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -897,16 +825,16 @@
             }
           }
         },
-        "x-ms-pageable": {
-          "nextLinkName": "nextLink"
-        },
         "x-ms-examples": {
-          "EvaluationTaxonomies_ListLatest_MaximumSet_Gen": {
+          "EvaluationTaxonomies_ListLatest_MaximumSet_Gen - generated by [MaximumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_ListLatest_MaximumSet_Gen.json"
           },
-          "EvaluationTaxonomies_ListLatest_MinimumSet_Gen": {
+          "EvaluationTaxonomies_ListLatest_MaximumSet_Gen - generated by [MinimumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_ListLatest_MinimumSet_Gen.json"
           }
+        },
+        "x-ms-pageable": {
+          "nextLinkName": "nextLink"
         }
       }
     },
@@ -946,16 +874,16 @@
             }
           }
         },
-        "x-ms-pageable": {
-          "nextLinkName": "nextLink"
-        },
         "x-ms-examples": {
-          "EvaluationTaxonomies_ListVersions_MaximumSet_Gen": {
+          "EvaluationTaxonomies_ListVersions_MaximumSet_Gen - generated by [MaximumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_ListVersions_MaximumSet_Gen.json"
           },
-          "EvaluationTaxonomies_ListVersions_MinimumSet_Gen": {
+          "EvaluationTaxonomies_ListVersions_MaximumSet_Gen - generated by [MinimumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_ListVersions_MinimumSet_Gen.json"
           }
+        },
+        "x-ms-pageable": {
+          "nextLinkName": "nextLink"
         }
       }
     },
@@ -1003,10 +931,10 @@
           }
         },
         "x-ms-examples": {
-          "EvaluationTaxonomies_GetVersion_MaximumSet_Gen": {
+          "EvaluationTaxonomies_GetVersion_MaximumSet_Gen - generated by [MaximumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_GetVersion_MaximumSet_Gen.json"
           },
-          "EvaluationTaxonomies_GetVersion_MinimumSet_Gen": {
+          "EvaluationTaxonomies_GetVersion_MaximumSet_Gen - generated by [MinimumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_GetVersion_MinimumSet_Gen.json"
           }
         }
@@ -1072,10 +1000,10 @@
           }
         },
         "x-ms-examples": {
-          "EvaluationTaxonomies_CreateOrUpdateVersion_MaximumSet_Gen": {
+          "EvaluationTaxonomies_CreateOrUpdateVersion_MaximumSet_Gen - generated by [MaximumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_CreateOrUpdateVersion_MaximumSet_Gen.json"
           },
-          "EvaluationTaxonomies_CreateOrUpdateVersion_MinimumSet_Gen": {
+          "EvaluationTaxonomies_CreateOrUpdateVersion_MaximumSet_Gen - generated by [MinimumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_CreateOrUpdateVersion_MinimumSet_Gen.json"
           }
         }
@@ -1120,10 +1048,10 @@
           }
         },
         "x-ms-examples": {
-          "EvaluationTaxonomies_DeleteVersion_MaximumSet_Gen": {
+          "EvaluationTaxonomies_DeleteVersion_MaximumSet_Gen - generated by [MaximumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_DeleteVersion_MaximumSet_Gen.json"
           },
-          "EvaluationTaxonomies_DeleteVersion_MinimumSet_Gen": {
+          "EvaluationTaxonomies_DeleteVersion_MaximumSet_Gen - generated by [MinimumSet] rule": {
             "$ref": "./examples/EvaluationTaxonomies_DeleteVersion_MinimumSet_Gen.json"
           }
         }
@@ -1171,12 +1099,6 @@
         "x-ms-examples": {
           "Evaluations_List_MaximumSet": {
             "$ref": "./examples/Evaluations_List_MaximumSet_Gen.json"
-          },
-          "Evaluations_List_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_List_MaximumSet_Gen.json"
-          },
-          "Evaluations_List_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -1233,12 +1155,6 @@
         "x-ms-examples": {
           "Evaluations_Get_MaximumSet": {
             "$ref": "./examples/Evaluations_Get_MaximumSet_Gen.json"
-          },
-          "Evaluations_Get_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Get_MaximumSet_Gen.json"
-          },
-          "Evaluations_Get_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_Get_MinimumSet_Gen.json"
           }
         }
       },
@@ -1287,12 +1203,6 @@
         "x-ms-examples": {
           "Evaluations_Delete_MaximumSet": {
             "$ref": "./examples/Evaluations_Delete_MaximumSet_Gen.json"
-          },
-          "Evaluations_Delete_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Delete_MaximumSet_Gen.json"
-          },
-          "Evaluations_Delete_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_Delete_MinimumSet_Gen.json"
           }
         }
       }
@@ -1343,12 +1253,6 @@
         "x-ms-examples": {
           "Evaluations_Cancel_MaximumSet": {
             "$ref": "./examples/Evaluations_Cancel_MaximumSet_Gen.json"
-          },
-          "Evaluations_Cancel_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Cancel_MaximumSet_Gen.json"
-          },
-          "Evaluations_Cancel_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_Cancel_MinimumSet_Gen.json"
           }
         }
       }
@@ -1396,12 +1300,6 @@
             "$ref": "./examples/Evaluations_Create_MaximumSet_Gen.json"
           },
           "Evaluations_Create_MinimumSet": {
-            "$ref": "./examples/Evaluations_Create_MinimumSet_Gen.json"
-          },
-          "Evaluations_Create_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_Create_MaximumSet_Gen.json"
-          },
-          "Evaluations_Create_MinimumSet_Gen": {
             "$ref": "./examples/Evaluations_Create_MinimumSet_Gen.json"
           }
         }
@@ -1451,12 +1349,6 @@
           },
           "Evaluations_CreateAgentEvaluation_MinimumSet": {
             "$ref": "./examples/Evaluations_CreateAgentEvaluation_MinimumSet_Gen.json"
-          },
-          "Evaluations_CreateAgentEvaluation_MaximumSet_Gen": {
-            "$ref": "./examples/Evaluations_CreateAgentEvaluation_MaximumSet_Gen.json"
-          },
-          "Evaluations_CreateAgentEvaluation_MinimumSet_Gen": {
-            "$ref": "./examples/Evaluations_CreateAgentEvaluation_MinimumSet_Gen.json"
           }
         }
       }
@@ -1495,12 +1387,6 @@
             "$ref": "./examples/Indexes_ListLatest_MaximumSet_Gen.json"
           },
           "Indexes_ListLatest_MinimumSet": {
-            "$ref": "./examples/Indexes_ListLatest_MinimumSet_Gen.json"
-          },
-          "Indexes_ListLatest_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_ListLatest_MaximumSet_Gen.json"
-          },
-          "Indexes_ListLatest_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_ListLatest_MinimumSet_Gen.json"
           }
         },
@@ -1550,12 +1436,6 @@
             "$ref": "./examples/Indexes_ListVersions_MaximumSet_Gen.json"
           },
           "Indexes_ListVersions_MinimumSet": {
-            "$ref": "./examples/Indexes_ListVersions_MinimumSet_Gen.json"
-          },
-          "Indexes_ListVersions_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_ListVersions_MaximumSet_Gen.json"
-          },
-          "Indexes_ListVersions_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_ListVersions_MinimumSet_Gen.json"
           }
         },
@@ -1612,12 +1492,6 @@
             "$ref": "./examples/Indexes_GetVersion_MaximumSet_Gen.json"
           },
           "Indexes_GetVersion_MinimumSet": {
-            "$ref": "./examples/Indexes_GetVersion_MinimumSet_Gen.json"
-          },
-          "Indexes_GetVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_GetVersion_MaximumSet_Gen.json"
-          },
-          "Indexes_GetVersion_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_GetVersion_MinimumSet_Gen.json"
           }
         }
@@ -1688,12 +1562,6 @@
           },
           "Indexes_CreateOrUpdateVersion_MinimumSet": {
             "$ref": "./examples/Indexes_CreateOrUpdateVersion_MinimumSet_Gen.json"
-          },
-          "Indexes_CreateOrUpdateVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_CreateOrUpdateVersion_MaximumSet_Gen.json"
-          },
-          "Indexes_CreateOrUpdateVersion_MinimumSet_Gen": {
-            "$ref": "./examples/Indexes_CreateOrUpdateVersion_MinimumSet_Gen.json"
           }
         }
       },
@@ -1741,12 +1609,6 @@
             "$ref": "./examples/Indexes_DeleteVersion_MaximumSet_Gen.json"
           },
           "Indexes_DeleteVersion_MinimumSet": {
-            "$ref": "./examples/Indexes_DeleteVersion_MinimumSet_Gen.json"
-          },
-          "Indexes_DeleteVersion_MaximumSet_Gen": {
-            "$ref": "./examples/Indexes_DeleteVersion_MaximumSet_Gen.json"
-          },
-          "Indexes_DeleteVersion_MinimumSet_Gen": {
             "$ref": "./examples/Indexes_DeleteVersion_MinimumSet_Gen.json"
           }
         }
@@ -1849,9 +1711,6 @@
         "x-ms-examples": {
           "Insights_ListInsights": {
             "$ref": "./examples/Insights_ListInsights_MinimumSet_Gen.json"
-          },
-          "Insights_ListInsights_MaximumSet_Gen": {
-            "$ref": "./examples/Insights_ListInsights_MaximumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -1915,9 +1774,6 @@
         "x-ms-examples": {
           "Insights_GenerateInsights": {
             "$ref": "./examples/Insights_GenerateInsights_MinimumSet_Gen.json"
-          },
-          "Insights_GenerateInsights_MaximumSet_Gen": {
-            "$ref": "./examples/Insights_GenerateInsights_MaximumSet_Gen.json"
           }
         }
       }
@@ -1978,9 +1834,6 @@
         "x-ms-examples": {
           "Insights_GetInsight": {
             "$ref": "./examples/Insights_GetInsight_MinimumSet_Gen.json"
-          },
-          "Insights_GetInsight_MaximumSet_Gen": {
-            "$ref": "./examples/Insights_GetInsight_MaximumSet_Gen.json"
           }
         }
       }
@@ -2027,12 +1880,6 @@
         "x-ms-examples": {
           "RedTeams_List_MaximumSet": {
             "$ref": "./examples/RedTeams_List_MaximumSet_Gen.json"
-          },
-          "RedTeams_List_MaximumSet_Gen": {
-            "$ref": "./examples/RedTeams_List_MaximumSet_Gen.json"
-          },
-          "RedTeams_List_MinimumSet_Gen": {
-            "$ref": "./examples/RedTeams_List_MinimumSet_Gen.json"
           }
         },
         "x-ms-pageable": {
@@ -2089,12 +1936,6 @@
         "x-ms-examples": {
           "RedTeams_Get_MaximumSet": {
             "$ref": "./examples/RedTeams_Get_MaximumSet_Gen.json"
-          },
-          "RedTeams_Get_MaximumSet_Gen": {
-            "$ref": "./examples/RedTeams_Get_MaximumSet_Gen.json"
-          },
-          "RedTeams_Get_MinimumSet_Gen": {
-            "$ref": "./examples/RedTeams_Get_MinimumSet_Gen.json"
           }
         }
       }
@@ -2142,12 +1983,6 @@
             "$ref": "./examples/RedTeams_Create_MaximumSet_Gen.json"
           },
           "RedTeams_Create_MinimumSet": {
-            "$ref": "./examples/RedTeams_Create_MinimumSet_Gen.json"
-          },
-          "RedTeams_Create_MaximumSet_Gen": {
-            "$ref": "./examples/RedTeams_Create_MaximumSet_Gen.json"
-          },
-          "RedTeams_Create_MinimumSet_Gen": {
             "$ref": "./examples/RedTeams_Create_MinimumSet_Gen.json"
           }
         }
