dpg, java, pin api-version in tspconfig

--- a/specification/communication/Communication.Messages/tspconfig.yaml
+++ b/specification/communication/Communication.Messages/tspconfig.yaml
@@ -45,6 +45,7 @@ options:
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-java":
+    api-version: "2025-01-15-preview"
     emitter-output-dir: "{output-dir}/{service-dir}/azure-communication-messages"
     namespace: com.azure.communication.messages
     partial-update: true
