--- a/specification/healthdataaiservices/HealthDataAIServices.DeidServices/tspconfig.yaml
+++ b/specification/healthdataaiservices/HealthDataAIServices.DeidServices/tspconfig.yaml
@@ -38,6 +38,7 @@ options:
       description: "Health Deidentification Service"
     flavor: azure
   "@azure-tools/typespec-java":
+    api-version: "2024-11-15"
     emitter-output-dir: "{output-dir}/{service-dir}/azure-health-deidentification"
     namespace: "com.azure.health.deidentification"
     service-name: Deidentification
