--- a/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
+++ b/specification/containerregistry/Azure.ContainerRegistry/tspconfig.yaml
@@ -54,7 +54,7 @@ options:
     flavor: "azure"
   "@azure-tools/typespec-go":
     emitter-output-dir: "{output-dir}/{service-dir}/azcontainerregistry"
-    module-name: "github.com/Azure/azure-sdk-for-go/sdk/containers/azcontainerregistry"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/azcontainerregistry"
     package-name: "azcontainerregistry"
     package-version: "0.2.4"
     inject-spans: true
