add C# emitter output directory rules  enable as required for testing

--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -90,8 +90,8 @@
   reason: Suppress until spec can be updated
   rules: [SdkTspConfigValidation]
   sub-rules:
-    - options.@azure-tools/typespec-go.*
-    - options.@azure-tools/typespec-csharp.*
+    - options.@azure-tools/typespec-go.flavor
+    - options.@azure-tools/typespec-java.namespace
   paths:
     - ai/Azure.AI.Projects/tspconfig.yaml
 
@@ -312,14 +312,6 @@
   reason: Suppress until spec can be updated
   rules: [SdkTspConfigValidation]
   sub-rules:
-    - options.@azure-tools/typespec-csharp.*
-  paths:
-    - cdn/Cdn.Management/tspconfig.yaml
-
-- tool: TypeSpecValidation
-  reason: Suppress until spec can be updated
-  rules: [SdkTspConfigValidation]
-  sub-rules:
     - options.@azure-tools/typespec-go.flavor
     - options.@azure-tools/typespec-go.generate-fakes
     - options.@azure-tools/typespec-go.inject-spans
@@ -459,7 +451,6 @@
   rules: [SdkTspConfigValidation]
   sub-rules:
     - options.@azure-tools/typespec-python.*
-    - options.@azure-tools/typespec-csharp.*
   paths:
     - containerservice/Fleet.Management/tspconfig.yaml
 
@@ -482,14 +473,6 @@
     - options.@azure-tools/typespec-go.generate-samples
   paths:
     - databasefleetmanager/DatabaseFleetManager.Management/tspconfig.yaml
-
-- tool: TypeSpecValidation
-  reason: Suppress until spec can be updated
-  rules: [SdkTspConfigValidation]
-  sub-rules:
-    - options.@azure-tools/typespec-csharp.*
-  paths:
-    - dataprotection/resource-manager/Microsoft.DataProtection/DataProtection/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
@@ -539,7 +522,6 @@
   sub-rules:
     - options.@azure-tools/typespec-csharp.*
     - options.@azure-tools/typespec-ts.*
-    - options.@azure-tools/typespec-python.*
   paths:
     - edge/Microsoft.Edge.ConfigurationManager.Management/tspconfig.yaml
     - edge/Microsoft.Edge.Configurations.Management/tspconfig.yaml
@@ -667,7 +649,6 @@
     - options.@azure-tools/typespec-java.*
     - options.@azure-tools/typespec-python.*
     - options.@azure-tools/typespec-ts.*
-    - options.@azure-tools/typespec-csharp.*
   paths:
     - keyvault/Security.KeyVault.BackupRestore/tspconfig.yaml
     - keyvault/Security.KeyVault.RBAC/tspconfig.yaml
@@ -684,7 +665,6 @@
     - options.@azure-tools/typespec-ts.package-details.name
     - options.@azure-tools/typespec-ts.package-dir
     - options.@azure-tools/typespec-ts.emitter-output-dir
-    - options.@azure-tools/typespec-csharp.*
   paths:
     - keyvault/Security.KeyVault.Certificates/tspconfig.yaml
     - keyvault/Security.KeyVault.Keys/tspconfig.yaml
@@ -737,11 +717,19 @@
   reason: Suppress until spec can be updated
   rules: [SdkTspConfigValidation]
   sub-rules:
-    - options.@azure-tools/typespec-go.*
+    - options.@azure-tools/typespec-go.flavor
     - options.@azure-tools/typespec-java.namespace
   paths:
-    - loadtestservice/data-plane/loadtesting/tspconfig.yaml
-    - loadtestservice/data-plane/playwright/tspconfig.yaml
+    - loadtestservice/LoadTestService/tspconfig.yaml
+
+- tool: TypeSpecValidation
+  reason: Suppress until spec can be updated
+  rules: [SdkTspConfigValidation]
+  sub-rules:
+    - options.@azure-tools/typespec-go.generate-samples
+  paths:
+    - loadtestservice/LoadTestService.Management/tspconfig.yaml
+    - loadtestservice/Playwright.Management/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
@@ -773,17 +761,6 @@
     - options.@azure-tools/typespec-java.*
   paths:
     - machinelearningservices/AzureAI.Assets/tspconfig.yaml
-
-- tool: TypeSpecValidation
-  reason: Suppress until spec can be updated
-  rules: [SdkTspConfigValidation]
-  sub-rules:
-    - options.@azure-tools/typespec-go.*
-    - options.@azure-tools/typespec-java.*
-    - options.@azure-tools/typespec-python.*
-    - options.@azure-tools/typespec-ts.*
-  paths:
-    - marketplacecatalog/Products/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
@@ -1008,14 +985,6 @@
   reason: Suppress until spec can be updated
   rules: [SdkTspConfigValidation]
   sub-rules:
-    - parameters.typespec-csharp.*
-  paths:
-    - relay/resource-manager/Microsoft.Relay/Relay/tspconfig.yaml
-
-- tool: TypeSpecValidation
-  reason: Suppress until spec can be updated
-  rules: [SdkTspConfigValidation]
-  sub-rules:
     - parameters.service-dir.default
   paths:
     - relationships/Relationships.Management/tspconfig.yaml
@@ -1115,22 +1084,6 @@
   reason: Suppress until spec can be updated
   rules: [SdkTspConfigValidation]
   sub-rules:
-    - options.@azure-tools/typespec-csharp.*
-  paths:
-    - storagesync/resource-manager/Microsoft.StorageSync/StorageSync/tspconfig.yaml
-
-- tool: TypeSpecValidation
-  reason: Suppress until spec can be updated
-  rules: [SdkTspConfigValidation]
-  sub-rules:
-    - options.@azure-tools/typespec-go.*
-  paths:
-    - storage/Microsoft.BlobStorage/tspconfig.yaml
-
-- tool: TypeSpecValidation
-  reason: Suppress until spec can be updated
-  rules: [SdkTspConfigValidation]
-  sub-rules:
     - options.@azure-tools/typespec-go.flavor
     - options.@azure-tools/typespec-go.generate-fakes
     - options.@azure-tools/typespec-go.inject-spans
@@ -1201,14 +1154,6 @@
   rules: [SdkTspConfigValidation]
   sub-rules:
     - options.@azure-tools/typespec-go.*
-  paths:
-    - webpubsub/data-plane/WebPubSub/tspconfig.yaml
-
-- tool: TypeSpecValidation
-  reason: Suppress until spec can be updated
-  rules: [SdkTspConfigValidation]
-  sub-rules:
-    - options.@azure-tools/typespec-go.*
     - options.@azure-tools/typespec-java.*
     - options.@azure-tools/typespec-python.*
     - options.@azure-tools/typespec-ts.*
@@ -1233,6 +1178,7 @@
     - options.@azure-tools/typespec-go.*
   paths:
     - ai/Azure.AI.Agents/tspconfig.yaml
+    - ai/Azure.AI.Projects/tspconfig.yaml
     - ai/ContentUnderstanding/tspconfig.yaml
     - ai/DocumentIntelligence/tspconfig.yaml
     - ai/Face/tspconfig.yaml
