--- a/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-08-01/configurationmanager.json
+++ b/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-08-01/configurationmanager.json
@@ -7596,6 +7596,16 @@
         ]
       }
     },
+    "AdditionalData": {
+      "type": "object",
+      "description": "Additional metadata or properties.",
+      "properties": {
+        "workflowId": {
+          "type": "string",
+          "description": "Id of the workflow."
+        }
+      }
+    },
     "AvailableSolutionTemplateVersion": {
       "type": "object",
       "description": "Available Solution template Version along with latest revision",
@@ -9134,6 +9144,10 @@
           "$ref": "../../../../../../common-types/resource-management/v5/types.json#/definitions/ErrorDetail",
           "description": "Error Details if any failure is there",
           "readOnly": true
+        },
+        "additionalData": {
+          "$ref": "#/definitions/AdditionalData",
+          "description": "Additional metadata or properties."
         }
       },
       "required": [
