--- a/specification/storage/Storage.Management/tspconfig.yaml
+++ b/specification/storage/Storage.Management/tspconfig.yaml
@@ -25,6 +25,7 @@ options:
     premium: false # TODO(change it to true when release)
     rename-model:
       FailoverRequestFailoverType: FailoverType
+      ListKeysRequestExpand: ListKeyExpand
     enable-sync-stack: false
   "@azure-tools/typespec-ts":
     service-dir: sdk/storage
