--- a/specification/dynatrace/Dynatrace.Management/tspconfig.yaml
+++ b/specification/dynatrace/Dynatrace.Management/tspconfig.yaml
@@ -13,11 +13,11 @@ options:
     arm-resource-flattening: false
     emit-lro-options: "all"
   "@azure-tools/typespec-csharp":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     flavor: azure
-    package-dir: "Azure.ResourceManager.Dynatrace"
     clear-output-folder: true
     model-namespace: true
-    namespace: "{package-dir}"
+    namespace: "Azure.ResourceManager.Dynatrace"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-dynatrace"
     namespace: "azure.mgmt.dynatrace"
@@ -25,28 +25,31 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-dynatrace"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-dynatrace"
     namespace: "com.azure.resourcemanager.dynatrace"
     service-name: "Dynatrace" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-dynatrace"
-    typespec-title-map:
-      ObservabilityClient: "DynatraceObservability"
+    is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
     package-details:
       name: "@azure/arm-dynatrace"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/dynatrace"
-    package-dir: "armdynatrace"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armdynatrace"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armdynatrace"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+  "@azure-typespec/http-client-csharp-mgmt":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
+    package-name: "Azure.ResourceManager.Dynatrace"
+    namespace: "{package-name}"
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
